@@ -42,7 +42,7 @@ HideUsersPanel=[true/false] If enabled BeeBEEP hide users panel at startup (defa
 HideOtherPanels=[true/false] If enabled BeeBEEP hide all other panels at startup (default=false) [3.0.6]
 DisableFileTransfer=[true/false] disable file transfer (default=false) [3.0.6]
 DisableSendMessage=[true/false] disable send message. BeeBEEP becomes a read only messenger (default=false) [3.0.6]
-UseEasyConnection=[true/false] BeeBEEP uses account name (if the nickname is not already set) and connects to the network with a standard session 
+UseEasyConnection=[true/false] BeeBEEP uses account name (if the nickname is not already set) and connects to the network with a standard session
                               (the same of AskNicknameAtStartup=false and UseDefaultPassword=true AskPasswordAtStartup=false in beebeep.ini file) (default=false) [3.0.6]
 StartMinimized=[true/false] If enabled BeeBEEP starts minimized (can be overruled in beeebeep.ini) (default=false) [3.0.7]
 Signature=[string] If not empty BeeBEEP uses it to generate network password (all BeeBEEP clients in your network must have the same signature) (auth=signature+encpwd) (default="") [3.0.8]
@@ -168,6 +168,7 @@ ShowFileTransferCompletedOnTray=[true/false] (default=true) [3.0.7]
 UserSortingMode=[integer] it defines the mode of users sorting (0=default) [3.0.8]
 SortUsersAscending=[true/false] if not true the users are sorting in descending mode [3.0.8]
 ShowPresetMessages=[true/false] if true the preset messages list is showed [3.0.8]
+ShowChatTextInModeRTL=[true/false] if true the layout direction in chat is RTL (default=false) [3.0.8]
 
 [Tools]
 LogToFile=[true/false] enable file logging
